--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "volta": {
     "node": "20.18.1",
-    "yarn": "4.5.1"
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+    "npm": "10.8.2"
+  }
 }
